# lnsocket

./: .envrc  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README  README.md  TODO  bech32.c  bigsize.c  bigsize.h  build.rs  commando.c  commando.h  compiler.h  config.h  configurator.c  crypto.c  crypto.h  cursor.h  endian.h  error.c  error.h  export.h  go.mod  go.sum  handshake.c  handshake.h  hkdf.c  hkdf.h  hmac.c  hmac.h  index.htm  index.js  lnrpc.c  lnsocket.c  lnsocket.go  lnsocket.h  (+19 more)
examples/: README.md  node.js  package.json  waitinvoice.html  waitinvoice.js  websockets.html  websockets.js
go/: go.mod  go.sum  lnsocket.go
go/test/: README.md  getinfo.go  test_lnsocket.py
rust/: lib.rs
test/: connection.js
tools/: 0001-configure-customizable-AR-and-RANLIB.patch  secp-ios.sh  secp-wasm.sh  sodium-wasm.sh
